src/FinancialForce ERP Core/objects/FeatureConsoleFeature__mdt.object
<CustomObject>
    <fields>
        <fullName>EnabledByDefault__c</fullName>
        <label>Enabled by default</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeatureDescription__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HelpPageParams__c</fullName>
        <label>Help Page Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpPage__c</fullName>
        <label>Help Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToggleAttributeWhenLicensed__c</fullName>
        <label>Toggle Attribute When Licensed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On and off</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>On only</fullName>
                </value>
                <value>
                    <fullName>Off only</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToggleAttribute__c</fullName>
        <label>Toggle Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On and off</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>On only</fullName>
                </value>
                <value>
                    <fullName>Off only</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feature</label>
    <pluralLabel>Features</pluralLabel>
</CustomObject>